ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-07-24 Benedikt Heintel
	- GUI:
		* Fixed #520: Warning in Edit ftp user
	- SQL:
		* Fixed #518: int(10) unsigned is too small for a traffic counter => bigint(20)
		* Deleted: unused table domain_probs

2007-07-24 Benedikt Heintel
	- GUI:
		* Fixed #517: update_hp.php is sending notification to wrong user

2007-07-23 Benedikt Heintel
	- GUI:
		* Fixed #513: Error in client-functions.php
	- SQL:
		* Fixed #511: Missing Commas in database.sql...

2007-07-21 Benedikt Heintel
	- ENGINE:
		* Fixed #490: ispcp-db-keys.php has invalid escape character
	- GUI:
		* Updated PMA to 2.10.3
	- SETUP:
		* Changed: setting permissions; status instead of files
	- SQL:
		* Fixed #491: database has missing indices

2007-07-20 Raphael Geissert
	- GUI:
		* Fixed #505: Notice message on page class.pTemplate.php
	- DOCS
		* Fixed #503: gcc is missing on Fedora-package
	- SETUP:
		* Added the VHCS2 remover for the migration script

2007-07-19 Raphael Geissert
	- CONFIGS:
		* Fixed #498: </IfModule> without matching <IfModule> section
	- SETUP:
		* Fixed #502: on every reinstall ispcp adds localhost as nameserver to /etc/resolv.conf
	- GUI:
		* Fixed error where the order panel sends the notification for the reseller to the client
	- ENGINE:
		* Fixed #497: Make mail homedirs unique per user (thanks to fenn_b@smktech.com.au for the patch)

2007-07-18 Raphael Geissert
	- CONFIGS:
		* Fixed #494: email from webmaster@gui
		* Fixed #397: Running ispcp-setup in an already installed system duplicates the cronjobs
	- SETUP:
		* Fixed #489: /lib/iptables/libipt_ISPCP_INPUT.so missing
	- ENGINE: